Implement SVGImage::applyShader()

Currently, when SVGImages need to be painted via shaders (e.g. rounded
borders) we build an SkImage backed by an SkPictureImageGenerator.  The
problem is SkPictureImageGenerator has an intrinsic resolution, so it
locks the rasterization scale prematurely.  If we later scale this
SkImage (pinch zoom, or device scale factor on certain platforms), we're
scaling a bitmap - not a vector recording.

To avoid this, implement an applyShader() override and use a
SkPictureShader (which does not lock the resolution) instead of
SkImage/SkPictureImageGenerator.

BUG=696575
R=fs@opera.com,schenney@chromium.org

Review-Url: https://codereview.chromium.org/2753633003
Cr-Commit-Position: refs/heads/master@{#457429}

Former-commit-id: f3470d2b864f14e076b1c891d39f7a65b5ab78b0